Fix missing Featured Media Header on mobile (#178)
* Fix missing featured media header on mobile
* Prepare a section for featured video on mobile

--- a/Pages/Index/IndexFeaturedMediaHeader/IndexFeaturedMediaHeader.razor.css
+++ b/Pages/Index/IndexFeaturedMediaHeader/IndexFeaturedMediaHeader.razor.css
@@ -13,3 +13,15 @@
     font-weight: 700;
     margin-bottom: 0;
 }
+
+@media (max-width: 540px) {
+    .header-container {
+        border-top: 0;
+    }
+
+    .header-contents {
+        padding-inline: 24px;
+        padding-top: 8px;
+        padding-bottom: 0;
+    }
+}
